--- a/business-card-main.html
+++ b/business-card-main.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
-    <link href="business-card-normalize.css" rel="stylesheet" type="text/css">
-    <link href="business-card-style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
+    <link href="business-card-normalize.css" rel="stylesheet" type="text/css" />
+    <link href="business-card-style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <main>
+        <img src="avatar.png" alt="zdjecie-przerobione">
+      <p>Imię i nazwisko</p>
+      <p>front-end developer</p>
+      <article>
+        Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona,
+        właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i
+        szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej
+        twórczości ocierając się o sztukę.
+      </article>
 
-
-
-
-
-
-
-        
+      <p>W sieci: Facebook, GitHub, Instagram.</p>
     </main>
-    
-</body>
+  </body>
 </html>
