adjust containers layout

--- a/business-card-main.html
+++ b/business-card-main.html
@@ -9,17 +9,20 @@
   </head>
   <body>
     <main>
-        <img src="avatar.png" alt="zdjecie-przerobione">
-      <p>Imię i nazwisko</p>
-      <p>front-end developer</p>
-      <article>
-        Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona,
-        właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i
-        szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej
-        twórczości ocierając się o sztukę.
-      </article>
+      <img src="avatar.png" alt="zdjecie-przerobione" />
 
-      <p>W sieci: Facebook, GitHub, Instagram.</p>
+      <div class="honbun">
+        <p class="namae">Imię i nazwisko</p>
+        <p class="shoku">front-end developer</p>
+        <article class="hontai">
+          Programista z <span style="color:orange;"> kilkunastoletnim doświadczeniem</span>, fotograf, operator
+          drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent
+          i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w
+          swojej twórczości ocierając się o sztukę.
+        </article>
+
+        <p class="saikabu linku">W sieci: Facebook, GitHub, Instagram.</p>
+      </div>
     </main>
   </body>
 </html>
