--- a/business-card-main.html
+++ b/business-card-main.html
@@ -15,13 +15,20 @@
         <p class="namae">Imię i nazwisko</p>
         <p class="shoku">front-end developer</p>
         <article class="hontai">
-          Programista z <span style="color:orange;"> kilkunastoletnim doświadczeniem</span>, fotograf, operator
-          drona, właściciel Sokoła Millennium (na razie tylko z Lego), prelegent
-          i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w
-          swojej twórczości ocierając się o sztukę.
+          Programista z
+          <span style="color: orange"> kilkunastoletnim doświadczeniem</span>,
+          fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko
+          z Lego), <span style="color: orange">prelegent i szkoleniowiec</span>.
+          Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości
+          ocierając się o sztukę.
         </article>
 
-        <p class="saikabu linku">W sieci: Facebook, GitHub, Instagram.</p>
+        <p class="saikabu">
+          W sieci: 
+          <a href="http://www.facebook.pl" class="link">Facebook</a>,
+          <a href="http://www.github.com" class="link">GitHub</a>, 
+          <a href="http://www.instagram.com" class="link">Instagram</a>.
+        </p>
       </div>
     </main>
   </body>
